# bfter

./: Cargo.toml  README.md
sample/: rot13.bf  simplify.bf
src/: main.rs
src/bf_str/: mod.rs  template.c
