[package]
name = "bfter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }

[dev-dependencies]
tempfile = "*"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # LTO instructs the linker to optimize at the link stage.
codegen-units = 1   # Reduce parallel code generation units to increase optimization
